--- a/roles/hqmgt-server/tasks/install-packages.yml
+++ b/roles/hqmgt-server/tasks/install-packages.yml
@@ -4,9 +4,9 @@
   become: true
 
   tasks:
-    - name: Installing tmux
+    - name: Installing wget
       dnf:
-        name: tmux
+        name: wget
         state: installed
 
     - name: Installing rsync
