--- a/ansible.cfg
+++ b/ansible.cfg
@@ -370,7 +370,7 @@ log_path = ~/.ansible.log
 # default Ansible will prompt to add the host key. This will cause connections
 # running in background processes to fail. Uncomment this line to have
 # Paramiko automatically add host keys.
-#host_key_auto_add = True
+host_key_auto_add = True
 
 
 [ssh_connection]
