updating the nginx reverse proxy config file

--- a/roles/reverse-proxy/files/proxy.conf
+++ b/roles/reverse-proxy/files/proxy.conf
@@ -3,17 +3,6 @@ server {
 
     location / {
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_pass http://hqpkiweb.secnetwork.org/pki/;
+        proxy_pass http://hqpkiweb.secnetwork.org;
     }
 }
-
-server {
-    server_name ocsp.secnetwork.org;
-
-    location / {
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_pass http://hqpkiweb.secnetwork.org/ocsp/;
-    }
-}
-
-
