--- a/roles/dns-server/files/named.conf
+++ b/roles/dns-server/files/named.conf
@@ -6,7 +6,7 @@ options {
         memstatistics-file "/var/named/data/named_mem_stats.txt";
         secroots-file   "/var/named/data/named.secroots";
         recursing-file  "/var/named/data/named.recursing";
-        allow-query     { localhost; 10.0.0.0/16; };
+        allow-query     { localhost; 10.0.31.11; 10.0.31.12; };
 
         recursion yes;
 
