Initial migration to Infrastructure as Code

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,7 +11,7 @@
 # documentation: https://docs.ansible.com/ansible/latest/reference_appendices/config.html.
 
 [defaults]
-inventory       = ~/ansible/inventory/hosts
+inventory       = ./inventory/hosts
 #library         = ~/.ansible/plugins/modules:/usr/share/ansible/plugins/modules
 #module_utils    = ~/.ansible/plugins/module_utils:/usr/share/ansible/plugins/module_utils
 remote_tmp      = ~/.ansible/tmp
@@ -104,7 +104,7 @@ local_tmp       = ~/.ansible/tmp
 # Uses the connection plugin's default, normally the user currently executing Ansible,
 # unless a different user is specified here.
 #
-#remote_user = root
+remote_user = p0001
 
 # Logging is off by default unless this path is defined.
 log_path = ~/.ansible.log
