--- a/playbooks/linux/install-default-pkgs.yaml
+++ b/playbooks/linux/install-default-pkgs.yaml
@@ -3,6 +3,11 @@
   become: true
   
   tasks:
+    - name: Install EPEL
+      dnf:
+        name: epel-release
+        state: installed
+
     - name: Install TMUX
       dnf:
         name: tmux
