--- a/playbooks/palo_alto/object_address.yml
+++ b/playbooks/palo_alto/object_address.yml
@@ -16,6 +16,11 @@
         address_object_value: '10.0.0.0/16'
         address_object_description: "SECNET HQ Network"
         address_object_tag: 'INTERNAL'
+            
+      - address_object_name: "hqfw1.secnetwork.org"
+        address_object_value: '10.0.11.11'
+        address_object_description: "hqfw1.secnetwork.org"
+        address_object_tag: 'SECNET-MGT'
 
       - address_object_name: "RFC1918 - 10.0.0.0"
         address_object_value: '10.0.0.0/8'
