--- a/roles/iac_panos/tasks/policy_security.yml
+++ b/roles/iac_panos/tasks/policy_security.yml
@@ -25,7 +25,7 @@
         group_tag: 'Unauthorized Traffic'
         source_zone: ['SECNET-AAA','SECNET-DMZ','SECNET-MGT','SECNET-SEC','SECNET-SRV','SECNET-USR','SECNET-VRT']
         source_ip: ['any']
-        #source_user: ['any']
+        source_user: ['any']
         destination_zone: ['WAN']
         destination_ip: ['RFC1918']
         application: ['any']
@@ -35,60 +35,14 @@
         action: 'deny'
         log_start: 'yes'
         log_end: 'no'
-        #audit_comment: ['{{ item.audit_comment }}']
-        #group_profile: ['{{ item.group_profile }}']
-        #antivirus: ['{{ item.antivirus }}']
-        #vulnerability: ['{{ item.vulnerability }}']
-        #spyware: ['{{ item.spyware }}']
-        #url_filtering: ['{{ item.url_filtering }}']
-        #file_blocking: ['{{ item.file_blocking }}']
-        #data_filtering: ['{{ item.data_filtering }}']
-        #wildfire_analysis: ['{{ item.wildfire_analysis }}']
-        #hip_profiles: ['TEST1']
         location: 'top'
-        #existing_rule: ['{{ item.existing_rule }}']
-      #with_items: '{{ inbound_security_policies }}'
 
-    - name: PA Network Services - Web Browsing
+    - name: PA Network Services - WEB-SSL
       panos_security_rule:
         provider: '{{ provider }}'
-        rule_name: 'PA Network Services - Web Browsing'
+        rule_name: 'PA Network Services - WEB-SSL'
         rule_type: intrazone
-        description: 'PA Network Services - Web Browsing'
-        tag_name: ['OUTBOUND']
-        group_tag: 'OUTBOUND'
-        source_zone: ['WAN']
-        source_ip: ['HQFW1 NAT IP']
-        #source_user: ['any']
-        destination_zone: ['WAN']
-        destination_ip: ['US']
-        application: ['web-browsing']
-        service: ['application-default']
-        category: ['any']
-        #log_setting: ''
-        action: 'allow'
-        log_start: 'no'
-        log_end: 'yes'
-        #audit_comment: ['{{ item.audit_comment }}']
-        #group_profile: ['{{ item.group_profile }}']
-        #antivirus: ['{{ item.antivirus }}']
-        #vulnerability: ['{{ item.vulnerability }}']
-        #spyware: ['{{ item.spyware }}']
-        #url_filtering: ['{{ item.url_filtering }}']
-        #file_blocking: ['{{ item.file_blocking }}']
-        #data_filtering: ['{{ item.data_filtering }}']
-        #wildfire_analysis: ['{{ item.wildfire_analysis }}']
-        #hip_profiles: ['TEST1']
-        location: 'after'
-        existing_rule: 'Prevent RFC1918 to WAN'
-      #with_items: '{{ inbound_security_policies }}'
-
-    - name: PA Network Services - SSL
-      panos_security_rule:
-        provider: '{{ provider }}'
-        rule_name: 'PA Network Services - SSL'
-        rule_type: intrazone
-        description: 'PA Network Services - SSL'
+        description: 'PA Network Services - WEB-SSL'
         tag_name: ['OUTBOUND']
         group_tag: 'OUTBOUND'
         source_zone: ['WAN']
@@ -103,19 +57,18 @@
         action: 'allow'
         log_start: 'no'
         log_end: 'yes'
-        #audit_comment: ['{{ item.audit_comment }}']
-        #group_profile: ['{{ item.group_profile }}']
-        #antivirus: ['{{ item.antivirus }}']
-        #vulnerability: ['{{ item.vulnerability }}']
-        #spyware: ['{{ item.spyware }}']
-        #url_filtering: ['{{ item.url_filtering }}']
-        #file_blocking: ['{{ item.file_blocking }}']
-        #data_filtering: ['{{ item.data_filtering }}']
-        #wildfire_analysis: ['{{ item.wildfire_analysis }}']
-        #hip_profiles: ['TEST1']
+        #audit_comment: ['']
+        #group_profile: ['']
+        #antivirus: ['']
+        #vulnerability: ['']
+        #spyware: ['']
+        #url_filtering: ['']
+        #file_blocking: ['']
+        #data_filtering: ['']
+        #wildfire_analysis: ['']
+        #hip_profiles: ['']
         location: 'after'
-        existing_rule: 'PA Network Services - Web Browsing'
-      #with_items: '{{ inbound_security_policies }}'
+        existing_rule: 'Prevent RFC1918 to WAN'
 
     - name: PA Network Services - PANOS
       panos_security_rule:
@@ -137,21 +90,20 @@
         action: 'allow'
         log_start: 'no'
         log_end: 'yes'
-        #audit_comment: ['{{ item.audit_comment }}']
-        #group_profile: ['{{ item.group_profile }}']
-        #antivirus: ['{{ item.antivirus }}']
-        #vulnerability: ['{{ item.vulnerability }}']
-        #spyware: ['{{ item.spyware }}']
-        #url_filtering: ['{{ item.url_filtering }}']
-        #file_blocking: ['{{ item.file_blocking }}']
-        #data_filtering: ['{{ item.data_filtering }}']
-        #wildfire_analysis: ['{{ item.wildfire_analysis }}']
-        #hip_profiles: ['TEST1']
+        #audit_comment: ['']
+        #group_profile: ['']
+        #antivirus: ['']
+        #vulnerability: ['']
+        #spyware: ['']
+        #url_filtering: ['']
+        #file_blocking: ['']
+        #data_filtering: ['']
+        #wildfire_analysis: ['']
+        #hip_profiles: ['']
         location: 'after'
         existing_rule: 'PA Network Services - SSL'
-      #with_items: '{{ inbound_security_policies }}'
 
-    - name: Default Deny
+    - name: Default Deny Policy
       panos_security_rule:
         provider: '{{ provider }}'
         rule_name: 'Default Deny Policy'
