--- a/roles/iac_panos/tasks/policy_security.yml
+++ b/roles/iac_panos/tasks/policy_security.yml
@@ -44,7 +44,7 @@
         rule_type: intrazone
         description: 'PA Network Services - WEB-SSL'
         tag_name: ['OUTBOUND']
-        group_tag: 'OUTBOUND'
+        group_tag: 'Firewall'
         source_zone: ['WAN']
         source_ip: ['HQFW1 NAT IP']
         #source_user: ['any']
@@ -77,7 +77,7 @@
         rule_type: intrazone
         description: 'PA Network Services - PANOS'
         tag_name: ['OUTBOUND']
-        group_tag: 'OUTBOUND'
+        group_tag: 'Firewall'
         source_zone: ['WAN']
         source_ip: ['HQFW1 NAT IP']
         #source_user: ['any']
@@ -103,6 +103,105 @@
         location: 'after'
         existing_rule: 'PA Network Services - WEB-SSL'
 
+    - name: PANOS to DNS
+      panos_security_rule:
+        provider: '{{ provider }}'
+        rule_name: 'PANOS to DNS'
+        rule_type: intrazone
+        description: 'PANOS to DNS'
+        tag_name: ['INTERNAL']
+        group_tag: 'Firewall'
+        source_zone: ['SECNET-SRV']
+        source_ip: ['10.0.31.1']
+        source_user: ['any']
+        destination_zone: ['SECNET-SRV']
+        destination_ip: ['DNS Servers']
+        application: ['dns']
+        service: ['application-default']
+        category: ['any']
+        #log_setting: ''
+        action: 'allow'
+        log_start: 'no'
+        log_end: 'yes'
+        #audit_comment: ['']
+        #group_profile: ['']
+        #antivirus: ['']
+        #vulnerability: ['']
+        #spyware: ['']
+        #url_filtering: ['']
+        #file_blocking: ['']
+        #data_filtering: ['']
+        #wildfire_analysis: ['']
+        #hip_profiles: ['']
+        location: 'after'
+        existing_rule: 'PA Network Services - PANOS'
+
+    - name: PANOS to NTP
+      panos_security_rule:
+        provider: '{{ provider }}'
+        rule_name: 'PANOS to NTP'
+        rule_type: intrazone
+        description: 'PANOS to NTP'
+        tag_name: ['INTERNAL']
+        group_tag: 'Firewall'
+        source_zone: ['SECNET-SRV']
+        source_ip: ['10.0.31.1']
+        source_user: ['any']
+        destination_zone: ['SECNET-SRV']
+        destination_ip: ['NTP Servers']
+        application: ['ntp']
+        service: ['application-default']
+        category: ['any']
+        #log_setting: ''
+        action: 'allow'
+        log_start: 'no'
+        log_end: 'yes'
+        #audit_comment: ['']
+        #group_profile: ['']
+        #antivirus: ['']
+        #vulnerability: ['']
+        #spyware: ['']
+        #url_filtering: ['']
+        #file_blocking: ['']
+        #data_filtering: ['']
+        #wildfire_analysis: ['']
+        #hip_profiles: ['']
+        location: 'after'
+        existing_rule: 'PANOS to DNS'
+
+    - name: PANOS to PDC - MS-WMI
+      panos_security_rule:
+        provider: '{{ provider }}'
+        rule_name: 'PANOS to PDC - MS-WMI'
+        rule_type: intrazone
+        description: 'PANOS to PDC - MS-WMI'
+        tag_name: ['INTERNAL']
+        group_tag: 'Firewall'
+        source_zone: ['SECNET-AAA']
+        source_ip: ['10.0.31.1']
+        source_user: ['any']
+        destination_zone: ['SECNET-AAA']
+        destination_ip: ['Domain Controllers']
+        application: ['ms-wmi']
+        service: ['application-default']
+        category: ['any']
+        #log_setting: ''
+        action: 'allow'
+        log_start: 'no'
+        log_end: 'yes'
+        #audit_comment: ['']
+        #group_profile: ['']
+        #antivirus: ['']
+        #vulnerability: ['']
+        #spyware: ['']
+        #url_filtering: ['']
+        #file_blocking: ['']
+        #data_filtering: ['']
+        #wildfire_analysis: ['']
+        #hip_profiles: ['']
+        location: 'after'
+        existing_rule: 'PANOS to NTP'
+  
     - name: Default Deny Policy
       panos_security_rule:
         provider: '{{ provider }}'
